tests/lean/type_error_at_eval_expr.lean.expected.out
type_error_at_eval_expr.lean:3:0: error: type error at eval_expr, argument has type '
  list ℕ
but is expected to have type
  ℕ
state:
⊢ true
